feat: improved starter project generation
Signed-off-by: Cory Rylan <cory@coryrylan.com>

--- a/src/project/src/alert/element.css
+++ b/src/project/src/alert/element.css
@@ -1,21 +1,21 @@
 :host {
   --background: #bed5f2;
   --color: #2d2d2d;
-  --font-family: Helvetica, Arial, "Lucida Grande", sans-serif;
   --gap: 12px;
   --padding: 12px;
+  font-family: inherit;
   display: block;
   width: 100%;
 }
 
 .private-host {
   background: var(--background);
-  font-family: var(--font-family);
   color: var(--color);
   gap: var(--gap);
   padding: var(--padding);
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 [part='icon'] {
@@ -49,9 +49,12 @@ button {
   padding: 0;
   cursor: pointer;
   color: hsla(0, 0%, 0%, 0.4);
-  background: hsla(0, 0%, 0%, 0.05);
 }
 
 button:hover {
+  background: hsla(0, 0%, 0%, 0.05);
+}
+
+button:active {
   background: hsla(0, 0%, 0%, 0.1);
 }
